# audio-bridge-concept

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  INSTRUCTION.md  LICENSE  README.md  build.sh
.claude/: settings.local.json
.github/workflows/: build.yml
config/: audio_bridge.conf  audio_policy.conf
java/com/audiobridge/: AudioBridgeService.java  BootReceiver.java  IPCClient.java  LauncherActivity.java  TelephonyHelper.java  VoiceCallCapture.java
jni/: Android.mk  audio_bridge.cpp  audio_bridge.h  jni_bridge.cpp  opus_wrapper.cpp  opus_wrapper.h
scratch/: check_braces.py  patch_debug.py
scripts/: install.sh  start.sh  stop.sh  uninstall.sh
server/: dashboard.html  main.py  protocol.md  requirements.txt  server.crt  server.key  server_example.py  test_client.py  test_server.py  test_tls.py
zygisk/module/: module.prop  post-fs-data.sh  service.sh  uninstall.sh
zygisk/module/system/etc/permissions/: privapp-permissions-com.audiobridge.xml
zygisk/module/webroot/: app.js  index.html  style.css
zygisk/src/: zygisk_module.cpp
